@@ -1,5 +1,11 @@
 2012-10-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	* run-addrname-test.sh: New test for PIE relocation.
+	* testfile70.core.bz2: New file.
+	* testfile70.exec.bz2: New file.
+
+2012-10-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* run-addrname-test.sh: New test for DSO with build-id bias.
 	* testfile69.core.bz2: New file.
 	* testfile69.so.bz2: New file.
